# Canon

./: .gitignore  CMakeLists.txt
HTTP/: HTTPmain.c  Parser.c  Parser.h
core/: Canon_Core.h  Connection.c  Connection.h  ErrorRaiser.h  bst.h  can_file.c  can_file.h  canon_tpool.c  canon_tpool.h  connection.c  connection.h  crc32.c  crc32.h  hashmap.c  hashmap.h  logger.c  logger.h  mutex.c  mutex.h  queue.c  queue.h  roundrobin.h  stack.c  stack.h
core/DataStructures/: bst.c  bst.h  hashmap.c  hashmap.h  queue.c  queue.h  request.c  request.h
core/Engine/: canon_procp.h  canon_tpool.c  canon_tpool.h
core/FileOps/: logger.c  logger.h
core/cacher/: file_cacher.h  request_cacher.c  request_cacher.h  static_cache.c  static_cache.h
core/datastructures/: bst.c  bst.h  hashmap.c  request.c  request.h  stack.c  stack.h
http/: HTTPmain.c  Parser.h  handler.c  handler.h  parser.c  parser.h  request.c  request.h
procs/: canon_procp.c  canon_procp.h  canon_tpool.c  canon_tpool.h  scheduler.c  scheduler.h  static_cache.c  static_cache.h
